<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inventory App</string>
    <string name="detail_title">Item details</string>
    <string name="editor_add">Add new item</string>
    <string name="editor_update">Edit existing item</string>

    <!-- Main activity -->
    <string name="list_price_text">Price: $<xliff:g exaple="7" ig="price">%d</xliff:g></string>
    <string name="in_stock">in stock:</string>
    <string name="sale_button">sale</string>
    <!-- Empty view -->
    <string name="inventory_is_empty">Inventory is empty</string>
    <string name="instruction_to_start">Click + button to add an item</string>
    <!-- Main activity menu -->
    <string name="add_new_entry">Add new entry</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <!-- Detail / Editor activity -->
    <string name="detail_price_text">$<xliff:g exaple="7" ig="price">%d</xliff:g></string>
    <string name="title_of_the_book">Title of the book</string>
    <string name="price_of_one_copy">Price of one copy</string>
    <string name="number_of_copies_in_stock">Number of copies in stock</string>
    <string name="name_of_the_supplier">Name of the supplier</string>
    <string name="phone_number_of_the_supplier">Phone number of the supplier</string>
    <!-- Edit Texts -->
    <string name="enter_title_here">Enter title here</string>
    <string name="enter_price_here">Enter price here</string>
    <string name="enter_quantity_here">Enter quantity here</string>
    <string name="enter_name_of_the_supplier_here">Enter name of the supplier here</string>
    <string name="enter_phone_number_of_the_supplier_here">Enter phone number of the supplier here</string>
    <!-- Detail activity menu -->
    <string name="call_supplier">Order from the supplier</string>
    <string name="edit_entry">Edit entry</string>
    <string name="action_delete_entry">Delete entry</string>
    <!-- Editor activity menu -->
    <string name="save">Save</string>

    <!-- Discard changes dialog -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- Delete dialog -->
    <string name="delete_dialog_msg">Delete this entry?</string>
    <string name="delete_all_dialog_msg">Delete all entries?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
