<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <TextView
        style="@style/DetailUpperTextStyle"
        android:text="@string/title_of_the_book"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editor_title"
        style="@style/EditorFieldStyle"
        android:hint="@string/enter_title_here"
        android:inputType="textCapWords" />

    <TextView
        style="@style/DetailUpperTextStyle"
        android:layout_marginTop="@dimen/details_spacing_large"
        android:text="@string/price_of_one_copy"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editor_price"
        style="@style/EditorFieldStyle"
        android:hint="@string/enter_price_here"
        android:inputType="number" />

    <TextView
        style="@style/DetailUpperTextStyle"
        android:layout_marginTop="@dimen/details_spacing_large"
        android:text="@string/number_of_copies_in_stock"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editor_quantity"
        style="@style/EditorFieldStyle"
        android:hint="@string/enter_quantity_here"
        android:inputType="number" />

    <TextView
        style="@style/DetailUpperTextStyle"
        android:layout_marginTop="@dimen/details_spacing_large"
        android:text="@string/name_of_the_supplier"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editor_supplier"
        style="@style/EditorFieldStyle"
        android:hint="@string/enter_name_of_the_supplier_here"
        android:inputType="textCapWords" />

    <TextView
        style="@style/DetailUpperTextStyle"
        android:layout_marginTop="@dimen/details_spacing_large"
        android:text="@string/phone_number_of_the_supplier"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editor_phone"
        style="@style/EditorFieldStyle"
        android:hint="@string/enter_phone_number_of_the_supplier_here"
        android:inputType="phone" />

</LinearLayout>